<package>
 <name> dumbo_dashboard </name>
  <version>1.0.0</version>
  <description>
    Dashboard for turning on Dumbo, easy control of the parallel gripper, and monitoring status of components.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dumbo_dashboard</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>brics_actuator</build_depend> 
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt4-qmake</build_depend>
  <build_depend>dumbo_srvs</build_depend>
  <build_depend>cob_srvs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>brics_actuator</run_depend>  
  <run_depend>libqt4</run_depend>
  <run_depend>dumbo_srvs</run_depend>
  <run_depend>cob_srvs</run_depend>


</package>
